--- a/src/app/components/usuarios/canciones/create-canciones/create-canciones.component.html
+++ b/src/app/components/usuarios/canciones/create-canciones/create-canciones.component.html
@@ -15,7 +15,7 @@
           
         </div>
         <div class="col1 col-lg-3">
-          <button  routerLink="/dashboard-user" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+          <button  routerLink="/Albumes" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
         </div>
       </div>
     </div>
