--- a/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
+++ b/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
@@ -1,9 +1,12 @@
 
-   
-   <app-header-artist></app-header-artist>  
-<div class="perfil_completo">
-          
+<div class="Completo_show_menu">
+  <div class="menu">
     <app-sidenav-user></app-sidenav-user>
+  </div>
+   
+<div class="perfil_completo">
+  <app-header-artist></app-header-artist>          
+ 
    
        
  <div class="texto">
@@ -67,9 +70,12 @@ Este módulo te permite visualizar el perfil Artista
 
 </form>
 </div>
-<hr>
+
 </div>
-<app-footer-sistem></app-footer-sistem>
+</div> 
+
+
+
 
 
 
