--- a/src/app/shared/header-artist/header-artist.component.html
+++ b/src/app/shared/header-artist/header-artist.component.html
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       
-    <a class="home" routerLink="home"><img src="assets/imagenes/oficial_logo.png" alt=""></a>
-      <ul class="nav">      
+
+      <ul class="nav justify-content-end">      
      
        
         <li  class="nav-item" >
-          <a class="nav-link" [routerLink]="['/dashboard-user']">dashboard</a>
+          <a class="nav-link" [routerLink]="['/dashboard-user']">Inicio</a>
         </li>
         
       </ul>
