--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -4,6 +4,9 @@
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
         Administrador
       </a>
+      <img [src]="this.imagen" class="avatar_perfil">
+      <h4 class="nombre">{{this.name}}</h4>
+      <hr>
 
   <ul class="nav nav-pills flex-column mb-auto">
     <li>
