--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -26,7 +26,7 @@
     background: #5C258D;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: auto;
+    height: 100vh;
 }
 .card_imagen{
     width: 50%;
