--- a/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.css
+++ b/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.css
@@ -1,5 +1,6 @@
 .Visualizacion_artistas_completa_aceptados{
-    display: flex;
+    width: 100%;
+    height: 100vh;
 }
 .formulario_completo_artistas_aceptados{
     margin-top: 30px;
@@ -10,12 +11,15 @@
     margin-bottom: 0% !important;
     padding-left: 5%;
     padding-right: 5%;
+   
 }
 .formulario_completo_artistas_aceptados h2{
     text-align: center;
     font-size: 180% ;
 }
-
+.Completo_solicitud_aceptadas{
+    display: flex;
+}
 
 .text-white{
     color: black;
@@ -25,4 +29,16 @@
 }
 .nombre_list{
     color: black;
+}
+.hola{
+    width: 99%;
+    height: 50px;
+    border-top-left-radius:5px ;
+    border-top-right-radius:5px ;
+    border-bottom-left-radius:5px ;
+    
+    border-bottom-right-radius:5px ;
+}
+.btn{
+    margin-right: 2%;
 }
