--- a/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.html
+++ b/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.html
@@ -1,17 +1,19 @@
-<app-header-admin></app-header-admin>
-<div class="Visualizacion_artistas_completa_aceptados">
+<div class="Completo_solicitud_aceptadas">
+<div class="Menu">
     <app-sidenav></app-sidenav>
+</div>
+
+<div class="Visualizacion_artistas_completa_aceptados">
+    <app-header-admin></app-header-admin>
 <div class="formulario_completo_artistas_aceptados">
-    <h2>Candidatos Aceptados</h2>
-    <p>En esta sección se visualiza, todas las solicitudes Acepatadas por el administrador.
-        Para que una solicitud sea aceptada ,los datos enviados deben ser  correctos, ademas que en el documento
-        PDF, debe estar correctamente lleno y firmado por el titular.
+    <h2>Solicitudes Aceptados</h2>
+    <p>Este módulo te permite visualizar todas las solicitudes aceptadas de los artistas
     </p>
     <hr>
     <tr>
-        <th> <a class="nav-link" routerLink="//administrador">Solicitud </a></th>
-        <th> <a class="nav-link" routerLink="/solicitud-aceptadas">Aceptadas </a></th>
-        <th> <a class="nav-link" routerLink="/solicitud-rechazadas">Rechazadas </a></th>
+        <th> <a class="nav-link" routerLink="/administrador"><u>Solicitud </u></a></th>
+        <th> <a class="nav-link" routerLink="/solicitud-aceptadas"><u>Aceptadas</u> </a></th>
+        <th> <a class="nav-link" routerLink="/solicitud-rechazadas"><u>Rechazadas</u> </a></th>
       
        
         
@@ -19,10 +21,11 @@
 
        
     </tr>
+    <input type="text" class="hola " placeholder="Buscar Solicitud por número de cédula" #textSearch (keyup)="onSearchSolicitud_Aceptadas(textSearch.value)"/>  
 
 <table class="table table-hover ">
     <thead class=" text-white">
-        <input type="text" class="form-control " placeholder="Buscar Solicitud" #textSearch (keyup)="onSearchSolicitud_Aceptadas(textSearch.value)"/>    
+  
     </thead>
     <thead class=" text-white">
         <tr class="nombre_list">
@@ -57,14 +60,13 @@
         </tr>
     </tbody>
 </table>
-<mat-paginator [length]="cantidad_aprobadas"
-              [pageSize]="pageSize"
-              (page)="cambiarpagina($event)"
-            
-              >
-              
-</mat-paginator>
+<button class="btn btn-secondary" (click)="atras_pagina_Solicitud_aceptadas()" >Anterior</button>
+<button class="btn btn-secondary" (click)="  siguiente_pagina_solicitud_aceptadas() " [disabled]="(Administrador | filtroSolicitudAceptadas:page:search).length<1">Siguiente</button> 
+
+</div>
 </div>
 </div>
 
-<app-footer-sistem></app-footer-sistem>
+
+
+
