--- a/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.css
+++ b/src/app/components/administrador/solicitud-rechazadas/solicitud-rechazadas.component.css
@@ -1,5 +1,6 @@
 .Visualizacion_artistas_completa_aceptados{
-    display: flex;
+    width: 100%;
+    height: 100%;
 }
 .formulario_completo_artistas_aceptados{
     margin-top: 30px;
@@ -24,4 +25,20 @@
 }
 .nombre_list{
     color: black;
+}
+.Completo_solicitud_rechazada{
+    display: flex;
+    height: 100vh;
+}
+.hola{
+    width: 99%;
+    height: 50px;
+    border-top-left-radius:5px ;
+    border-top-right-radius:5px ;
+    border-bottom-left-radius:5px ;
+    
+    border-bottom-right-radius:5px ;
+}
+.btn{
+    margin-right: 2%;
 }
