--- a/src/app/components/perfil/show/show.component.html
+++ b/src/app/components/perfil/show/show.component.html
@@ -1,51 +1,57 @@
-<app-header-admin></app-header-admin>  
-<div class="perfil_completo">
-          
-    <app-sidenav></app-sidenav>
-   
-       
- <div class="texto">
-    <h2> Perfil Aministrador</h2>
-    <p>
-        En esta seccion se puede visualizar el perfil del administrador,el cual cuenta con  información  personal, como es un  avatar y sus datos.
-   </p>
-   <hr>
-<form [formGroup]="ediForm"  novalidate class="formulario_show_perfil">
-   
-    
-   
+<div class="Completo_perfil_administrador">
 
+    <div class="menu">
+        <app-sidenav></app-sidenav>
+    </div>
+
+    <div class="perfil_completo">         
+        <app-header-admin></app-header-admin>        
+         <div class="texto">
+            <h2> Perfil Aministrador</h2>
+            <p>
+               Este módulo te permite visualizar el perfil administrador 
+           </p>
+           <hr>
+        <form [formGroup]="ediForm"  novalidate class="formulario_show_perfil">
+           
+            
+           
+        
+         
+           
+            <div class="imagen_avatar">
+            
+           <img [src]="this.url" class="avatar_perfil">
+               <h2>Administrador</h2>
+            </div>
+            <div class="form_perfil">
+            <div class="mb-12">
+                <label class="form-label">Nombre</label>
+                <input formControlName="name" type="text" class="form-control"  required [readonly]="true" >      
+            </div>
+            <div class="mb-12">
+                <label class="form-label">Apellido</label>
+                <input formControlName="apellido" type="text" class="form-control" required [readonly]="true" >      
+            </div>
+            <div class="mb-12">
+                <label class="form-label">Alias</label>
+                <input formControlName="nickname" type="text" class="form-control" required [readonly]="true"  >       
+            </div>
+           
+            
+            <button routerLink="/edit/{{usuario}}" class="btn btn-primary w-100">Editar</button>
+        </div>
+        
+        
+        </form>
+        </div>
+        <hr>
+        </div>
+   
+</div>
  
-   
-    <div class="imagen_avatar">
-    
-   <img [src]="this.url" class="avatar_perfil">
-       <h2>Administrador</h2>
-    </div>
-    <div class="form_perfil">
-    <div class="mb-12">
-        <label class="form-label">Nombre</label>
-        <input formControlName="name" type="text" class="form-control"  required [readonly]="true" >      
-    </div>
-    <div class="mb-12">
-        <label class="form-label">Apellido</label>
-        <input formControlName="apellido" type="text" class="form-control" required [readonly]="true" >      
-    </div>
-    <div class="mb-12">
-        <label class="form-label">Alias</label>
-        <input formControlName="nickname" type="text" class="form-control" required [readonly]="true"  >       
-    </div>
-   
-    
-    <button routerLink="/edit/{{usuario}}" class="btn btn-primary w-100">Editar</button>
-</div>
 
 
-</form>
-</div>
-<hr>
-</div>
-<app-footer-sistem></app-footer-sistem>
 
 
 
