--- a/src/app/components/usuarios/Albumes/create-albumes/create-albumes.component.css
+++ b/src/app/components/usuarios/Albumes/create-albumes/create-albumes.component.css
@@ -1,4 +1,10 @@
 .Contenedos_todos_los_albumes {
+    width: 100%;
+
+    height: 100vh;
+
+}
+.Completo_create_albumes{
     display: flex;
 }
 .container{
@@ -40,4 +46,7 @@
  }
  .red{
     border-color: red; 
+ }
+ .btn{
+    margin-left: 50px;
  }
