--- a/src/app/components/usuarios/canciones/edit-canciones/edit-canciones.component.html
+++ b/src/app/components/usuarios/canciones/edit-canciones/edit-canciones.component.html
@@ -1,35 +1,65 @@
-<app-header-artist></app-header-artist>
-<div class="contenedos_edit_generos">
-  <app-sidenav-user></app-sidenav-user>
-<form class="formulario_generos" (ngSubmit)="onSubmit()" [formGroup]="ediForm">
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Cancion" required formControlName="song_nombre">
+<div class="contenedor_editar">
+  <div class="menu">
+    <app-sidenav-user></app-sidenav-user>
+  </div>
+  <div class="contenido">
+    <app-header-artist></app-header-artist>
+    <div class="parrafo_informativo">
+    <div>
+      <h2> Editar Canciones </h2>
+      <p>
+        Este módulo te permite editar las canciones creados 
+    </p>
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col col-lg-3">
+         
+        </div>
+        <div class="col col-lg-3">
+          
+        </div>
+        <div class="col1 col-lg-3">
+          <button  routerLink="/Canciones" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+        </div>
+      </div>
+    </div>
+  </div>
     
- 
+    <form class="formulario_generos" (ngSubmit)="onSubmit()" [formGroup]="ediForm">
+    
+    <div class="imagenes_canciones">
+      
+    
+        <input 
+            type="file"
+            #file
+            class="input-file" accept="audio/*"
+            (change)="onFilesAdded($event.target)"
+        />
+        <img (click)="addFiles()" class="upload" [src]="this.url" alt="" />
+    
+    
+    </div>
+    <div class="formulario_canciones"> 
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Cancion" required formControlName="song_nombre"  ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="cancion_nombre_nuevo_no_valido">
+      <label class="error" *ngIf="cancion_nombre_nuevo_no_valido"  >{{cancionmio()}}</label> 
+      <br>
+      <br>
+      
+      
+      
+    </div>
+    <button  class="btn btn-primary w-100" [disabled]="!ediForm.valid"   type="submit">EDITAR</button>
+  </div>
+   
+    </form>
+    
+    
+    
     
   </div>
-<div class="form-group">
-  
-
-    <input 
-        type="file"
-        #file
-        class="input-file" accept="audio/*"
-        (change)="onFilesAdded($event.target)"
-    />
-    <img (click)="addFiles()" class="upload" [src]="this.url" alt="" />
-
-
+  </div>
 </div>
 
-
-<div class="modal-footer">
-  <button  class="btn btn-secondary" [disabled]="!ediForm.valid"   type="submit">EDITAR</button>
- 
-</div>
-</form>
-
-
-
-</div>
-<app-footer-sistem></app-footer-sistem>
