--- a/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
+++ b/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
@@ -1,61 +1,66 @@
-<app-header-artist></app-header-artist>
-<div class="Contenedos_todos_los_canciones">
-  <app-sidenav-user></app-sidenav-user>
-<div class="container">
-    
-  <div class="container col-lg-12 col-sm-12 col-md-12">
-   
-
-
-
-    <h2>Todos tus canciones </h2>
-  
-    <p>
-      En esta sección se visualizan las canciones del Artista.
-  </p>
-  <hr>
+<div class="Completo_show_canciones">
+  <div class="Menu">
+    <app-sidenav-user></app-sidenav-user>
+  </div>
+  <div class="Contenedos_todos_los_canciones">
+    <app-header-artist></app-header-artist>
   <div class="container">
-    <div class="row">
-      <div class="col col-lg-4">
-       
-      </div>
-      <div class="col col-lg-6">
-        
-      </div>
-      <div class="col1 col-lg-2">
-        <button  routerLink="/dashboard-user" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+      
+    <div class="container col-lg-12 col-sm-12 col-md-12">
+     
+  
+  
+  
+      <h2>Todas tus canciones </h2>
+    
+      <p>
+        En esta sección se visualizan las canciones del Artista.
+    </p>
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col col-lg-4">
+         
+        </div>
+        <div class="col col-lg-6">
+          
+        </div>
+        <div class="col1 col-lg-2">
+          <button  routerLink="/Albumes" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+        </div>
       </div>
     </div>
-  </div>
-  <input type="text" class="hola" placeholder="Buscar por nombre de la Canción " #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
-    <table class="table">
-      
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Cancion</th>
-          <th scope="col">Mp3</th>
-          <th scope="col">Eliminar</th>
-      
-        </tr>
-      </thead>
-      <tbody>
+    <input type="text" class="hola" placeholder="Buscar por nombre de la Canción " #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
+      <table class="table">
         
-        <tr *ngFor="let CancionesSolicitud of   todoslascanciones | filtrarCanciones:page:search  let i= index ">
-          <td>{{page+i+1}}</td>
-          <td>{{CancionesSolicitud.song_nombre}}</td>
-   
-          <td><audio [src]="CancionesSolicitud.imageURL" controls></audio></td>
-          <td><button type="button" class="btn btn-danger"
-            (click)="eliminar_cancion(CancionesSolicitud)">Eliminar</button></td>
-
-            <td><button routerLink="/edit-Canciones/{{CancionesSolicitud.id}}" class="btn btn-primary" >Editar</button></td>
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Cancion</th>
+            <th scope="col">Mp3</th>
+            <th scope="col">Eliminar</th>
+        
+          </tr>
+        </thead>
+        <tbody>
           
-        </tr>
-      </tbody>
-    </table>
-  
+          <tr *ngFor="let CancionesSolicitud of   todoslascanciones | filtrarCanciones:page:search  let i= index ">
+            <td>{{page+i+1}}</td>
+            <td>{{CancionesSolicitud.song_nombre}}</td>
+     
+            <td><audio [src]="CancionesSolicitud.imageURL" controls></audio></td>
+            <td><button type="button" class="btn btn-danger"
+              (click)="eliminar_cancion(CancionesSolicitud)">Eliminar</button></td>
+              <td><button routerLink="/edit-Canciones/{{CancionesSolicitud.id}}" class="btn btn-primary" >Editar</button></td>
+    
+          </tr>
+        </tbody>
+      </table>
+    
+  </div>
+  </div>
+  </div>
 </div>
-</div>
-</div>
-<app-footer-sistem></app-footer-sistem>
+
+
+
