--- a/src/app/components/usuarios/generos/create-generos/create-generos.component.css
+++ b/src/app/components/usuarios/generos/create-generos/create-generos.component.css
@@ -1,6 +1,9 @@
 .componente_generos{
-   display:flex ; 
+
+   width: 100%;
+   height: 100vh;
 }
+
 .input-group{
    margin-top: 8%;
  
@@ -23,12 +26,17 @@
    padding-left: 5%;
    padding-right: 5%;
    width: 80%;
+   margin-left: 5%;
    
 
 }
 .crear_generos h2{
    text-align: center;
    align-items: center;
+}
+.crear_generos p{
+   padding-left: 5%;
+   padding-right: 5%;
 }
 
 .formulario_generos{
@@ -53,11 +61,16 @@
    display: inline-block;
 }
 .col1{
-   margin-left: 5%;
+   margin-left: 1%;
 }
 .error{
    color: red;
 }
 .red{
    border-color: red; 
+}
+.Completo_create_generos{
+   display: flex;
+    height: auto;
+   width: 100%;
 }
