--- a/src/app/components/usuarios/generos/create-generos/create-generos.component.html
+++ b/src/app/components/usuarios/generos/create-generos/create-generos.component.html
@@ -1,58 +1,65 @@
-  <app-header-artist></app-header-artist>
-<div class="componente_generos">
-    <app-sidenav-user></app-sidenav-user>
-    <div class="crear_generos">
-      <div>
-    <h2>Crear Nuevos Género</h2>
-    <p>
-      Este módulo te permite crear nuevos géneros
-    </p>
-    <hr>
-    <div class="container">
-      <div class="row">
-        <div class="col col-lg-4">
-         
-        </div>
-        <div class="col col-lg-4">
-          
-        </div>
-        <div class="col1 col-lg-3">
-          <button  routerLink="/dashboard-user" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
-        </div>
-      </div>
+  <div class="Completo_create_generos">
+
+    <div class="menu">
+      <app-sidenav-user></app-sidenav-user>
     </div>
+
+    <div class="componente_generos">
+      <app-header-artist></app-header-artist>
+        <div class="crear_generos">
+          <div>
+        <h2>Crear Nuevos Género</h2>
+        <p>
+          Este módulo te permite crear nuevos géneros
+        </p>
+        <hr>
+        <div class="container">
+          <div class="row">
+            <div class="col col-lg-4">
+             
+            </div>
+            <div class="col col-lg-4">
+              
+            </div>
+            <div class="col1 col-lg-3">
+              <button  routerLink="/generos" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+            </div>
+          </div>
+        </div>
+          
+      </div>
+        <div class="form-group " >
+    
+    
+          <form class="formulario_generos" (ngSubmit)="crear_generos()" [formGroup]="generosforms">
+            <div class="form-group">
+            
+              <img class="imagenes_generos" [src]="imgURL" with="100" height="100">
+              <br>
+              <input type="file" class="form-control-file" accept="image/*" (change)="selectChange($event)" ><br>
       
-  </div>
-    <div class="form-group " >
-
-
-      <form class="formulario_generos" (ngSubmit)="crear_generos()" [formGroup]="generosforms">
-        <div class="form-group">
         
-          <img class="imagenes_generos" [src]="imgURL" with="100" height="100">
-          <br>
-          <input type="file" class="form-control-file" accept="image/*" (change)="selectChange($event)" ><br>
-  
+      
+            </div>
+            <div class="input-group mb-3">
+              <label class="label_genero" >Género</label>
+              <input type="text" class="form-control" placeholder="Generos" required formControlName="Genero_nuevo" ngModel pattern="[a-zA-Z-ñ ]*"  [class.red]="genero_nuevo_no_valido" >
+              <label class="error"  *ngIf="genero_nuevo_no_valido" >{{getErrorMessage_genero_nuevo()}}</label>   
+              <button  class="btn btn-primary w-100" [disabled]="!generosforms.valid"   type="submit">Crear</button>
+            </div>
+        
     
-  
-        </div>
-        <div class="input-group mb-3">
-          <label class="label_genero" >Género</label>
-          <input type="text" class="form-control" placeholder="Generos" required formControlName="Genero_nuevo" ngModel pattern="[a-zA-Z-ñ ]*"  [class.red]="genero_nuevo_no_valido" >
-          <label class="error"  *ngIf="genero_nuevo_no_valido" >{{getErrorMessage_genero_nuevo()}}</label>   
-          <button  class="btn btn-primary w-100" [disabled]="!generosforms.valid"   type="submit">Crear</button>
-        </div>
     
-
-
-   
-  
        
+      
+           
+        
+        </form>
     
-    </form>
-
+      </div>
+    
+    </div>
+    </div>
   </div>
 
-</div>
-</div>
-<app-footer-sistem></app-footer-sistem>
+
