--- a/src/app/components/usuarios/generos/edit-generos/edit-generos.component.css
+++ b/src/app/components/usuarios/generos/edit-generos/edit-generos.component.css
@@ -1,6 +1,16 @@
 .contenedos_edit_generos{
+    width: 100%;
+
+    height: 100vh;
+}
+.Completo_edit_genero{
     display: flex;
 }
+.col1{
+ 
+    margin-left: 5% !important;
+      text-align: right;
+  }
 .imagenes_generos{
     height: 150px;
     width: 150px;
@@ -84,7 +94,12 @@
     padding-left: 5%;
     padding-right: 5%;
 }
-
+.error{
+    color: red;
+}
+.red{
+    border-color: red; 
+}
 
 @media only screen and (max-width: 1200px) {
 
