--- a/src/app/components/usuarios/generos/generos.component.html
+++ b/src/app/components/usuarios/generos/generos.component.html
@@ -1,6 +1,9 @@
-<app-header-artist></app-header-artist>
-<div class="Contenedos_todos_los_generos ">
+<div class="Completo_generos">
+<div class="menu">
   <app-sidenav-user></app-sidenav-user>
+</div>
+<div class="Contenedos_todos_los_generos ">
+  <app-header-artist></app-header-artist>
   <div class="container1 ">
    
 
@@ -17,9 +20,6 @@
     <div class="col col-lg-4">
       <a [routerLink]="['/crear-generos']"><button type="button" class="btn_generos btn-primary w-100" (click)=" limpiarform()"
         data-toggle="modal" data-target="#productosModal"> Crear Géneros</button> </a>
-    </div>
-    <div class="col2 col-lg-3">
-      
     </div>
     <div class="col1 col-lg-4">
       <button  routerLink="/dashboard-user" type="submit" class=" regesar btn_generos btn-primary w-100">Regresar</button>
@@ -60,4 +60,6 @@
 
 
 </div>
-<app-footer-sistem></app-footer-sistem>
+</div>
+
+
