--- a/src/app/components/usuarios/perfil-artist/edit-artist/edit-artist.component.css
+++ b/src/app/components/usuarios/perfil-artist/edit-artist/edit-artist.component.css
@@ -1,5 +1,7 @@
 .formulario_editar_completo{
-    display: flex;
+
+    width: 100%;
+    height:100vh ;
   
 }
 .btn{
@@ -43,4 +45,9 @@
 }
 .red{
     border-color: red; 
+}
+.Completo_edit_perfil{
+    display: flex;
+    
+    width: 100%;
 }
