--- a/src/app/components/usuarios/solicitud/solicitud.component.css
+++ b/src/app/components/usuarios/solicitud/solicitud.component.css
@@ -1,6 +1,7 @@
 .formulario{
-    display: flex;
+    width: 100%;
     height: auto;
+  
    
 }
 .formulario_solicitud{
@@ -122,6 +123,12 @@ width:100%;
 .botoneseliminarSolicitud{
     margin: 5px;
    
+}
+.Completo_solicitud{
+    display: flex;
+ 
+    height: auto;
+
 }
 
 @media only screen and (max-width: 1200px) {
