--- a/src/app/shared/header-admin/header-admin.component.css
+++ b/src/app/shared/header-admin/header-admin.component.css
@@ -8,17 +8,21 @@
   
 }
 
-
 .home{
     text-decoration: none;
     color: aliceblue;
+    margin-left: 4%;
   }
   .home img{
-    width:60px;
+    width:90;
   height:60px;
-  border-radius:150px;
+
   }
   .nav-link{
     color: aliceblue;
+  }
+  .container-fluid{
+    justify-content: end;
+  
   }
   
